svc_deploy_blog.yml
---
# svc-blog
kind: Service
apiVersion: v1
metadata:
  name: svc-blog            # rule에있는것과 동일해야함.
spec:
  selector:
    app:  blog
  type: ClusterIP           # 안해도댐 (default)
  ports:
  - port:  80
    targetPort: 80

---
# deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: kangdaeyoung/portal:blog
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
